--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Lobster|Timmana" rel="stylesheet">
         <title>
             Abhishek Pillai
         </title>
@@ -8,24 +9,78 @@
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>            
-        <!--img src="images/success quote.jpg" alt="success"-->
+        <section id="Home">
+            <a>
+                <e id="typewriter"></e><br><br>
+                <div id="button-link">
+                    Enter
+                    <i id = "arrow" class = "right-arrow"></i>
+                </div>
+            </a>
+        </section>        
+        <section id="About">
+            <!--div class="header" id="header">
+                <a href="#Home">Home</a>
+                <a href="#About">About Me</a>
+                <a href="#Project">Projects</a>
+                <a href="#Contact">Contact Details</a>
+            </div-->
+            <hr>                                
+            <h1>
+                Welcome!
+            </h1>
+            <table>
+                <tr>
+                    <td>
+                        <a class="heading">About Me<br></br></a>
+                        <a> I am a Masters student at Texas A&M University, studying Management Information Systems
+                            which is a blend of Management and Technology. Having worked in IT for about two years as
+                            a software developer building web pages using ASP.Net, I look forward to improving my skills
+                            by learning new technologies and frameworks.
+                        </a>
+                        <ul> 
+                            <li>Social Media Analyst</li>
+                            <li>Web Developer</li>
+                            <li>Software Engineer</li>
+                        </ul>
+                    </td>
+                    <td class="tdright"><img src="images/ab.jpg" alt="abhishek"></td>
+                </tr>
+            </table>
+        </section>
+        <section id="Skill">
+            <div id="leftP">
+                <table>
+                    <tr><td>HTML5</td><td>80%</td></tr>
+                    <tr><td>CSS</td><td>70%</td></tr>
+                    <tr><td>JavaScript</td><td>80%</td></tr>
+                    <tr><td>ASP.Net</td><td>80%</td></tr>
+                    <tr><td>Microsoft SQL</td><td>85%</td></tr>
+                    <tr><td>Angular2</td><td>70%</td></tr>
+                    <tr><td>JQuery</td><td>40%</td></tr>
+                </table>
+            </div>
+            <div id="rightP">
+                <table>
+                    <tr><td>Java</td><td>80%</td></tr>
+                    <tr><td>C#</td><td>80%</td></tr>
+                    <tr><td>Python</td><td>70%</td></tr>
+                    <tr><td>T-SQL</td><td>40%</td></tr>
+                </table>
+            </div>
+        </section>
+        <section id="Contact">
+            <div class="footer">
+                <table class="footertable" width: 100%>
+                    <tr>
+                        <td>Abhishek Anilkumar Pillai<br>Phone: (979)304-0481<br>Email: abhipillai@tamu.edu</td>
+                        <td class="media"><img src="images/fb.png" alt="fb"></td>
+                        <td class="media"><img src="images/twitter.jpg" alt="twitter"></td>
+                        <td class="media"><img src="images/9gag.jpg" alt="9gag"></td>
+                    </tr>
+                </table>
+            </div>
+        </section>
         <script src="script.js"></script>
-        <h1>
-            Welcome!
-        </h1>
-        <table>
-            <tr>
-                <td>
-                    <a class="heading">About me</a>
-                    <ul> 
-                        <li>MIS Graduate Student, Texas A&M University</li>
-                        <li>Social Media Analyst</li>
-                        <li>Web Developer</li>
-                        <li>Software Engineer</li>
-                    </ul>
-                </td>
-                <td class="tdright"><img src="images/ab.jpg" alt="abhishek"></td>
-            </tr>
-        </table>
     </body>
 </html>
