--- a/index.html
+++ b/index.html
@@ -57,37 +57,52 @@
         </section>
         <section id="Skill">
             <hr>
-            <div id="leftP">
-                <table>
-                    <tr><td>HTML5</td><td>80%</td></tr>
-                    <tr><td>CSS</td><td>70%</td></tr>
-                    <tr><td>JavaScript</td><td>80%</td></tr>
-                    <tr><td>ASP.Net</td><td>80%</td></tr>
-                    <tr><td>Microsoft SQL</td><td>85%</td></tr>
-                    <tr><td>Angular2</td><td>70%</td></tr>
-                    <tr><td>JQuery</td><td>40%</td></tr>
-                </table>
-            </div>
-            <div id="rightP">
-                <table>
-                    <tr><td>Java</td><td>80%</td></tr>
-                    <tr><td>C#</td><td>80%</td></tr>
-                    <tr><td>Python</td><td>70%</td></tr>
-                    <tr><td>T-SQL</td><td>40%</td></tr>
-                </table>
-            </div>
+            <div class="main-container">
+                Skills<br>
+                <div class="row">
+                    <div class="col-left">
+                        Technology
+                        <table>
+                            <tr><td>HTML5</td><td>80%</td></tr>
+                            <tr><td>CSS</td><td>70%</td></tr>
+                            <tr><td>JavaScript</td><td>80%</td></tr>
+                            <tr><td>ASP.Net</td><td>80%</td></tr>
+                            <tr><td>Microsoft SQL</td><td>85%</td></tr>
+                            <tr><td>Angular2</td><td>70%</td></tr>
+                            <tr><td>JQuery</td><td>40%</td></tr>
+                        </table>
+                    </div>
+                    <div class="col-right">
+                        Programming Languages
+                        <table>
+                            <tr><td>Java</td><td>80%</td></tr>
+                            <tr><td>C#</td><td>80%</td></tr>
+                            <tr><td>Python</td><td>70%</td></tr>
+                            <tr><td>T-SQL</td><td>40%</td></tr>
+                        </table>
+                    </div>
+                </div>
+            </div>            
         </section>
         <section id="Contact">
-            <div class="footer">
-                <table class="footertable" width: 100%>
-                    <tr>
-                        <td>Abhishek Anilkumar Pillai<br>Phone: (979)304-0481<br>Email: abhipillai@tamu.edu</td>
-                        <td class="media"><img src="images/fb.png" alt="fb"></td>
-                        <td class="media"><img src="images/twitter.jpg" alt="twitter"></td>
-                        <td class="media"><img src="images/9gag.jpg" alt="9gag"></td>
-                    </tr>
-                </table>
-            </div>
+            <hr>
+            <div class="main-container">
+                Contact Details<br><br>
+                <div class="row">
+                    <div class="col-1">
+                        <a>Abhishek Anilkumar Pillai<br>Phone: (979)304-0481<br>Email: abhipillai@tamu.edu</a>                        
+                    </div>
+                    <div class="col-2">
+                        <img src="images/fb.png" alt="fb">
+                    </div>
+                    <div class="col-3">
+                        <img src="images/twitter.png" alt="twitter">
+                    </div>
+                    <div class="col-4">
+                        <img src="images/insta.png" alt="instagram">
+                    </div>
+                </div>
+            </div>            
         </section>
         <script src="script.js"></script>
     </body>
