--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>            
         <section id="Home">
-            <div class = "main-container">
+            <div class = "container">
                 <br><br><br><br>
                 <div class = "row">
                     <div class = "col-md-12">
@@ -33,8 +33,11 @@
         <section id="About">
             <hr>                              
             <div class="container">
-                    <h1>About me</h1><br><br>
+                <h1>About me</h1><br><br>
                 <div class="row">
+                    <div class="col-md-4">
+                        <img class="img-responsive img-rounded" src="images/ab.jpg" alt="abhishek">
+                    </div>
                     <div class="col-md-8">
                         <h2>
                             I am a Masters student at Texas A&M University, studying Management Information Systems
@@ -46,15 +49,12 @@
                             <li>Software Engineer</li>
                         </h2>
                     </div>
-                    <div class="col-md-4">
-                        <img class="img-responsive img-rounded" src="images/ab.jpg" alt="abhishek">
-                    </div>
                 </div>
             </div>            
         </section>
         <section id="Skill">
             <hr>
-            <div class="main-container">
+            <div class="container">
                 <h1>Skills</h1><br>
                 <div class="row">
                     <div class="col-md-6">
@@ -83,7 +83,7 @@
         </section>
         <section id="Contact">
             <hr>
-            <div class="main-container">
+            <div class="container">
                 <h1>Contact Details</h1><br><br>
                 <div class="row">
                     <div class="col-md-8">
