--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>            
         </section>
         <!-- Skills -->
-        <section class="Skill">
+        <section class="Skill">        
             <div class="container">
                 <div class="row">
                     <div class="col-md=12">
@@ -198,27 +198,122 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <h2>Technology</h2>
-                        <table>
-                            <tr><td>HTML5</td><td>80%</td></tr>
-                            <tr><td>CSS</td><td>70%</td></tr>
-                            <tr><td>JavaScript</td><td>80%</td></tr>
-                            <tr><td>ASP.Net</td><td>80%</td></tr>
-                            <tr><td>Microsoft SQL</td><td>85%</td></tr>
-                            <tr><td>Angular2</td><td>70%</td></tr>
-                            <tr><td>JQuery</td><td>40%</td></tr>
-                        </table>
+            </div>
+            <div class="skill-names">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h2>Technology</h2>
+                        </div>
+                        <div class="col-md-6">
+                            <h2>Programming Languages</h2>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <h2>Programming Languages</h2>
-                        <table>
-                            <tr><td>Java</td><td>80%</td></tr>
-                            <tr><td>C#</td><td>80%</td></tr>
-                            <tr><td>Python</td><td>70%</td></tr>
-                            <tr><td>T-SQL</td><td>40%</td></tr>
-                        </table>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <!-- HTML -->        
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/HTML5.png" alt="HTML5">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" 
+                                    aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                                </div>
+                            </div>                     
+                            <!-- CSS -->               
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/css3.png" alt="CSS3">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 70%" 
+                                    aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                                </div>
+                            </div>                    
+                            <!-- JavaScript -->        
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/js.png" alt="JS">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" 
+                                    aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                                </div>
+                            </div>   
+                            <!-- ASP.Net -->        
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/asp.png" alt="ASP.Net">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" 
+                                    aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                                </div>
+                            </div>      
+                            <!-- Angular 2 -->                      
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/angular2.png" alt="Angular2">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 70%" 
+                                    aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                                </div>
+                            </div>        
+                            <!-- JQuery -->   
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/JQuery.png" alt="JQuery">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" 
+                                    aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                                </div>
+                            </div>                            
+                        </div>
+                        <div class="col-md-6">
+                            <!-- Java -->
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/java.png" alt="Java">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" 
+                                    aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                                </div>
+                            </div>                     
+                            <!-- C# -->               
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/Csharp.jpg" alt="C#">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" 
+                                    aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                                </div>
+                            </div>                    
+                            <!-- Python -->        
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/python.jpg" alt="Python">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 70%" 
+                                    aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                                </div>
+                            </div>   
+                            <!-- SQL -->        
+                            <div class="skill-unit">
+                                <div class="skill-icon">
+                                    <img src="images/SQL.png" alt="SQL">
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 85%" 
+                                    aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                                </div>
+                            </div>                                  
+                        </div>
                     </div>
                 </div>
             </div>            
