--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
+        <link rel="stylesheet" type="text/css" href="css/animate.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         
         <!-- favicon -->
@@ -452,6 +453,7 @@
         <script src="js/script.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.bxslider.js"></script>
+        <script src="js/wow.min.js"></script>
 
     </body>
 </html>
