--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-header">
-                            <h2>ABOUT ME</h2>
+                            <h2 class="wow fadeInUp" data-wow-duration="1s">ABOUT ME</h2>
                             <p>
                                 I am a Masters student at Texas A&M University, studying Management Information Systems
                                 which is a blend of Management and Technology. Having worked in IT for about two years as
