--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="col-md-12">
                         <div class="section-header">
                             <h2 class="wow fadeInUp" data-wow-duration="1s">ABOUT ME</h2>
-                            <p>
+                            <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 I am a Masters student at Texas A&M University, studying Management Information Systems
                                 which is a blend of Management and Technology. Having worked in IT for about two years as
                                 a software developer building web pages using ASP.Net, I look forward to improving my skills
@@ -99,7 +99,7 @@
             </div>
             <div class="container">                
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3 wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
                         <div class="abhishek-image">
                             <img class="img-responsive img-rounded" src="images/ab.jpg" alt="abhishek">
                         </div>
@@ -107,7 +107,7 @@
                             <div class="btn btn-view btn-dwnld" target="_block">Download Resume</div>
                         </a>
                     </div>
-                    <div class="col-md-9"> 
+                    <div class="col-md-9 wow fadeIn" data-wow-duration="1s" data-wow-delay="1.4s"> 
                         <!--div class="desc-header">
                             <h3>Academics</h3>
                         </div>                
@@ -179,11 +179,13 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="section-header">
-                                <h2>Projects</h2>                                
+                                <h2 class="wow fadeInUp">Projects</h2>                                
                             </div>
+                        </div>
+                        <div class="col-md-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                             <div id="carousel-project" class="carousel slide" data-ride="carousel">
                                 <!-- Indicators -->
-                                <ol class="carousel-indicators">
+                                <ol>
                                     <li data-target="#carousel-project" data-slide-to="0" class="active"></li>
                                     <li data-target="#carousel-project" data-slide-to="1"></li>
                                     <li data-target="#carousel-project" data-slide-to="2"></li>
@@ -259,7 +261,7 @@
         <section class="Skill" id="Skill">        
             <div class="container">
                 <div class="row">
-                    <div class="col-md=12">
+                    <div class="col-md=12 wow fadeInUp" data-wow-duration="1s">
                         <div class="section-header">
                             <h2>Skills</h2>
                         </div>
@@ -269,7 +271,7 @@
             <div class="skill-names">
                 <div class="container">
                     <div class="row">                          
-                        <div class="col-md-6">
+                        <div class="col-md-6 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="prg-skills">
                                 <!-- Java -->
                                 <div class="skill-unit">
@@ -313,10 +315,10 @@
                                 </div>   
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 wow fadeIn" data-wow-duration="1s" data-wow-delay="1.2s">
                             <div class="prg-skills">
                                 <div class="skill-unit">
-                                    <div class="skill-icon">
+                                    <div classs="skill-icon">
                                         <div class="skill-name">MS SQL</div>
                                     </div>
                                     <div class="progress">
@@ -374,7 +376,7 @@
         <section class="Interests" id="Interests">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-10 col-md-offset-1">
+                    <div class="col-md-10 col-md-offset-1 wow fadeInUp" data-wow-duration="1s">
                         <div class="section-header">
                             <h2>Activities and Interests</h2>
                         </div>
@@ -383,7 +385,7 @@
             </div>
             <div class="interest-slider">
                 <div class="container">
-                    <div class="row">
+                    <div class="row wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
                         <div class="bxslider text-center">  
                             
                             <div class="item">
