Removed project images

--- a/index.html
+++ b/index.html
@@ -323,19 +323,10 @@
                             </div>
                         </div>
                         <div class="col-md-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                            <div id="carousel-project" class="carousel slide" data-ride="carousel">
-                                <!-- Indicators -->
-                                <ol>
-                                    <li data-target="#carousel-project" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carousel-project" data-slide-to="1"></li>
-                                    <li data-target="#carousel-project" data-slide-to="2"></li>
-                                    <li data-target="#carousel-project" data-slide-to="3"></li>
-                                </ol>
-                                <!-- Wrappers -->
-                                <div class="carousel-inner">
+                            <div class="bxslider">
                                     <div class="item active text-center">
-                                        <img src="images/movie-database.jpg" alt="movie-database" 
-                                        class="center-block">
+                                        <!--img src="images/movie-database.jpg" alt="movie-database" 
+                                        class="center-block"-->
                                         <div class="project-caption">
                                             <h2>Movie Collection Database</h2>
                                             <h4><span>Skills: </span>Angular 2, Node.js, JavaScript, Bootstrap, JQuery</h4>
@@ -348,8 +339,8 @@
                                         </div>
                                     </div>
                                     <div class="item text-center">
-                                        <img src="images/pepsico.jpg" alt="PepsiCo" 
-                                        class="center-block">
+                                        <!--img src="images/pepsico.jpg" alt="PepsiCo" 
+                                        class="center-block"-->
                                         <div class="project-caption">
                                             <h2>PepsiCo Bid Procurement Analysis</h2>
                                             <h4><span>Skills: </span>Tableau</h4>
@@ -362,8 +353,8 @@
                                         </div>
                                     </div>
                                     <div class="item text-center">
-                                        <img src="images/dw.jpg" alt="DataWarehouse" 
-                                        class="center-block">
+                                        <!--img src="images/dw.jpg" alt="DataWarehouse" 
+                                        class="center-block"-->
                                         <div class="project-caption">
                                             <h2>Dominic's Fine Food Data Warehouse</h2>
                                             <h4><span>Skills: </span>MS SQL Server, SSIS, SSRS, SSAS and Excel</h4>
@@ -376,8 +367,8 @@
                                         </div>
                                     </div>
                                     <div class="item text-center">
-                                        <img src="images/rec.jpg" alt="recession" 
-                                        class="center-block">
+                                        <!--img src="images/rec.jpg" alt="recession" 
+                                        class="center-block"-->
                                         <div class="project-caption">
                                             <h2>Recession Effect on College Towns</h2>
                                             <h4><span>Skills: </span>Python: Numpy, Pandas</h4>
