--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     <p>(979)304-0481</p>
                                 </div>
                             </div>
-                            <a  href="src/Resume_Pillai_Abhishek.docx" class="dwnld" download>
+                            <a  href="src/Resume_Abhishek_Pillai.pdf" class="dwnld" download>
                                 <div class="btn btn-view btn-dwnld" target="_block">Download Resume</div>
                             </a>
                         </div>
@@ -350,7 +350,7 @@
                                                 Created a story on Tableau server showcasing the highly effective 
                                                 carrier bids on different lanes
                                             </p>
-                                            <div class="btn btn-view" target="_block">View</div>
+                                            <div class="btn btn-view" onclick="window.open('https://public.tableau.com/profile/abhishek.pillai#!/vizhome/Tableau_PepsiCo1/TheInsightStory', '_blank')">View</div>
                                         </div>
                                     </div>
                                     <div class="item text-center">
@@ -364,7 +364,7 @@
                                                     Designed a data warehouse by concatenating store demographic, sales,
                                                     and customer data using dimensional models
                                             </p>
-                                            <div class="btn btn-view" target="_block">View</div>
+                                            <div class="btn btn-view" onclick="window.open('https://github.com/abhipillai/Data-Warehouse', '_blank')">View</div>
                                         </div>
                                     </div>
                                     <div class="item text-center">
@@ -377,7 +377,7 @@
                                                 non-university towns during recession of Q3 2008 through Q4 2009
                                                 Proved a hypothesis that both groups performed the same; ran T-Test
                                             </p>
-                                            <div class="btn btn-view" target="_block">View</div>
+                                            <div class="btn btn-view" onclick="window.open('https://github.com/abhipillai/Data-analysis', '_blank')">View</div>
                                         </div>
                                     </div> 
                                 </div>
