--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                         <div class = "col-md-12">
                             
                             <!-- Text -->
-                            <div class="text-center">
-                                <h1 class="typewriter">
+                            <div class="text-center padtop">
+                                <h1 class="typewriter typew">
                                     Hello, I am <b id="bTag">Abhishek Pillai</b>
                                 </h1>
-                                <h1 class="b">
+                                <h1 class="b typew">
                                         Welcome to my website
                                 </h1>
                             </div>   
