--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                         </div>
                     </div>
                     <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
+                        <div class="prg">
+                            <h3>Programming Skills</h3>
+                        </div>
                         <div class="prg-skills">
                             <!-- Java -->                            
                             <div class="skillbar clearfix " data-percent="80%">
