--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <div class="col-md-6">                                  
                         <div class="desc-header wow fadeIn" data-wow-duration="1s" data-wow-delay="1.2s">
                             <h3>Work Experience</h3>
-                        </div-->
+                        </div>
                         <div class="job-descriptions">
                             <div class="job wow fadeInUp glowing-border" data-wow-duration="1s" data-wow-delay="1.2s">
                                 <div class="job-gen">
